nullsjekk og tom Set ved null. (#1490)